--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
       <form action="">
         <h1>Login</h1>
         <div class="input-box">
-          <input type="text" placeholder="Username" required />
+          <input type="text" placeholder="Username" required  class="userName"/>
           <i class='bx bxs-user'></i>
         </div>
 
         <div class="input-box">
-          <input type="password" placeholder="Passwort" required />
+          <input type="password" placeholder="Passwort" required class="password"/>
           <i class='bx bxs-lock-alt' ></i>
         </div>
 
@@ -28,13 +28,22 @@
           <a href="#">Forgot password</a>
         </div>
 
-        <button type="submit" class="btnLogin">Login</button>
+        <button type="submit" class="btnLogin"
+        onclick="btnFunctionLogin()">Login</button>
 
         <div class="register-link">
           <p>Dont't have an account? <a href="#">Register</a></p>
         </div>
       </form>
     </div>
+
+
+    <div class="modal">
+      
+    </div>
+
+<script src="script.js"></script>
+
   </body>
 </html>
                         
